[gd_scene load_steps=8 format=3 uid="uid://s8keg1kyi1jy"]

[ext_resource type="Script" path="res://audio.gd" id="1_47g8d"]
[ext_resource type="AudioStream" uid="uid://dhj8xsyrjciql" path="res://DITS.mp3" id="2_fx2ei"]
[ext_resource type="AudioStream" uid="uid://b5814xpn5g6e" path="res://cateholic.mp3" id="3_pm2lh"]
[ext_resource type="Texture2D" uid="uid://cqna7fy4fdqsq" path="res://DS.webp" id="3_v31ef"]
[ext_resource type="AudioStream" uid="uid://bgxhre8lp7fvw" path="res://dxyl.mp3" id="4_rcbga"]
[ext_resource type="Texture2D" uid="uid://8thbuh7a2vad" path="res://Chatholi.webp" id="5_kxevt"]
[ext_resource type="Texture2D" uid="uid://kyssunyqu1nl" path="res://DXimg.webp" id="7_5wgfs"]

[node name="Audio" type="Node2D"]
position = Vector2(267, 117)
script = ExtResource("1_47g8d")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fx2ei")
bus = &"Music"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pm2lh")
bus = &"Music"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rcbga")
bus = &"Music"

[node name="Button" type="Button" parent="."]
offset_left = 387.0
offset_top = 323.0
offset_right = 595.0
offset_bottom = 531.0
icon = ExtResource("3_v31ef")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 638.0
offset_top = 323.0
offset_right = 846.0
offset_bottom = 531.0
icon = ExtResource("5_kxevt")
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
offset_left = 136.0
offset_top = 323.0
offset_right = 344.0
offset_bottom = 531.0
icon = ExtResource("7_5wgfs")
metadata/_edit_use_anchors_ = true

[node name="HSlider" type="HSlider" parent="."]
offset_left = -171.0
offset_top = 425.0
offset_right = 29.0
offset_bottom = 489.0
max_value = 50.0
metadata/_edit_use_anchors_ = true

[node name="HSlider2" type="HSlider" parent="."]
offset_left = -168.0
offset_top = 361.0
offset_right = 32.0
offset_bottom = 425.0
max_value = 50.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
